--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "vue": "^3.0.11",
+    "express": "^4.17.1",
     "zone.js": "~0.11.3"
   },
   "devDependencies": {
